--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -307,3 +307,4 @@ GitHub.sublime-settings
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,sublimetext,pycharm
 n
+seen.p
